@@ -7,6 +7,7 @@
   salad [train|predict] -q
 * Extend the (unit) testing framework to support test of the
   overall application and memchecks using valgrind.
+* Testing mode was renamed: salad dbg -> salad test
 * Allow to select either client or server-side data when
   processing network communication.
 * libfoodstoragebox
@@ -14,7 +15,8 @@
   as bloom filters.
 * Fixes for a critical bug when using group input and several
   minor issues.
-* An (optionally compressed) text-based model file format
+* A (optionally compressed) text-based model file format
+* The default hashset ('simple2') makes use of djb2 hash
 
 0.5.0
 * Refinements to the user interface
